tests/mvar/reject/caller_reads_callee_writes.nos
# expect: error
# Caller reads mvar, callee writes same mvar - UNSAFE

mvar counter: Int = 0

increment() = {
    counter = counter + 1
    counter
}

main() = {
    # UNSAFE: main reads counter, but calls increment which writes counter
    increment()
    counter
}
